fix: scrollbar

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@
 }
 
 .img {
-  width: calc(100vh - 17px);
+  /* width: calc(100vw - 17px); */
+  width: 100vw;
   height: 100vh;
 }
 
